# asyncify

./: .gitignore  another_file.py  asyncify.py  classy.py  main_mod.py  pyproject.toml  test_async_class.py  test_asyncify_do_nothing.py  things.py
tests/: test_asyncify.py  test_asyncify_auto.py  test_asyncify_uno.py  things.py
