[tool.poetry]
name = "asyncify"
version = "0.2.1"
description = ""
authors = ["jessekrubin <jessekrubin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
